# cpp_arch

./: README.md
image_processor_package/: CMakeLists.txt  README.md  package.xml
image_processor_package/include/image_processor_package/: img_subscriber.hpp  passthrough_processor.hpp  processor_factory.hpp  processor_interface.hpp
image_processor_package/src/: img_subscriber.cpp  main.cpp
image_processor_package_bridge/: CMakeLists.txt  README.md  package.xml
image_processor_package_bridge/include/image_processor_package/: camera_source.hpp  factory.hpp  img_source_interface.hpp  mock_source.hpp
image_processor_package_bridge/src/: camera_source.cpp  main.cpp  mock_source.cpp
image_processor_package_type_erasure/: CMakeLists.txt  README.md  package.xml
image_processor_package_type_erasure/include/image_processor_package/: img_subscriber.hpp  processor_factory.hpp  type_erasure_processor.hpp
image_processor_package_type_erasure/src/: img_subscriber.cpp  main.cpp
